refactor: remove Nginx frontend container in favor of S3 deployment and implement dynamic CORS configuration in the backend